<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">USSDParser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="call">Call</string>
    <string name="error_ussd_msg">USSD Response Not Found</string>
    <string name="title_activity_result">Result</string>
    <string name="result_text">Result</string>
    <string name="call_number">Phone example #123#</string>
    <string name="call_number_hint">#123#</string>
    <string name="time_interval">Time interval (in Minutes)</string>
    <string name="time_interval_hint">0.5</string>
    <string name="settings">Settings</string>
    <string name="uri_scheme">ussd</string>
    <string name="uri_authority">cd</string>
    <string name="uri_path">/</string>
    <string name="uri_param_name">uval</string>
    <string name="webservice_link">http://200.59.27.28:8095/Servicios.asmx</string>
    <string name="webservice_link_text">Webservice Url</string>
    <string name="webservice_interval">0.5</string>

</resources>
