<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewExecuteInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/time_interval"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText android:id="@+id/editTextExecuteInterval"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewExecuteInterval"
        android:layout_centerHorizontal="true"
        android:cursorVisible="true"
        android:singleLine="true"
        android:hint="@string/time_interval_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextExecuteInterval"
        android:text="@string/call_number"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText android:id="@+id/ussdCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:cursorVisible="true"
        android:singleLine="true"
        android:hint="@string/call_number_hint"/>

    <Button
        android:id="@+id/call_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ussdCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/call"
        android:onClick="onClickCall"/>

    <Button
        android:id="@+id/start_service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/call_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/start_service"
        android:onClick="onClickStartService" />

    <Button
        android:id="@+id/stop_Service"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_service"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/stop_service"
        android:onClick="onClickStopService"/>

</RelativeLayout>
